# pairing_matrix

./: .default.pairing-matrix.conf.yaml  .example.env  .gitignore  .pairing-matrix.conf.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .test.pairing-matrix.conf.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
pairing_matrix/: __init__.py  config.py  defaults.py  find_ancestor_file.py  pairing_matrix.py  stats_to_matrix.py
pairing_matrix/author/: author.py
pairing_matrix/client/: __init__.py  base_client.py  github_client.py  gitlab_client.py
pairing_matrix/clients/: __init__.py  base_client.py  github_client.py  gitlab_client.py
tests/: author_mocks.py  test_pairing_matrix.py  test_stats_to_matrix.py
